<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Adarsh">

    <TextView
        android:id="@+id/tv13"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/almendra_sc"
        android:text="Adarsh Hiremath"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/arbutus_slab"
        android:gravity="center_horizontal"
        android:text="USN: 1BY18IS004"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv13" />

    <TextView
        android:id="@+id/tv11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/arbutus_slab"
        android:gravity="center_horizontal"
        android:text="Phone: +91 9380275140"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv10" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/arbutus_slab"
        android:gravity="center_horizontal"
        android:text="Email: adarsh.c.hiremath@gmail.com"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv11" />

    <TextView
        android:id="@+id/tv12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/arbutus_slab"
        android:gravity="center_horizontal"
        android:text="About:"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="362dp"
        android:layout_height="120dp"
        android:fontFamily="@font/arbutus_slab"
        android:gravity="center_horizontal"
        android:text="I’m pursuing my Bachelors’ of Engineering at BMS institute of Technology. I’m a Developer and researcher understudy interested in machine learning and Data Science."
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="153dp"
        android:layout_height="146dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"
        app:srcCompat="@drawable/karan" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/arbutus_slab"
        android:gravity="center_horizontal"
        android:text="@string/AdarshL"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/arbutus_slab"
        android:gravity="center_horizontal"
        android:text="@string/AdarshG"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <Button
        android:id="@+id/exit"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/purple_500"
        android:fontFamily="@font/almendra_sc"
        android:text="Exit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:backgroundTint="#073980"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/purple_500"
        android:fontFamily="@font/almendra_sc"
        android:text="Next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:backgroundTint="#073980"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/purple_500"
        android:fontFamily="@font/almendra_sc"
        android:text="Go back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:backgroundTint="#073980"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/arbutus_slab"
        android:gravity="center_horizontal"
        android:text="@string/AdarshP"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t1" />

</androidx.constraintlayout.widget.ConstraintLayout>